# spectral-multiomics-engine

./: .gitignore  README.md  ms-dotnettools.dotnet-interactive-vscode-1.0.7120010.vsix  pyproject.toml
.github/workflows/: ci.yml
notebooks/: pipeline_demo.ipynb
notebooks/data/notebook_demo/: contact_map.npz  meta.json  signal.bedgraph.tsv
scripts/: encode_search.py
src/spectral_multiomics/: __init__.py  binning.py  cli.py  contact_map.py  laplacian.py  pipeline.py  projection.py  realdata.py  reporting.py  synth.py
src/spectral_multiomics_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_binning.py  test_laplacian.py  test_pipeline_smoke.py
